@@ -45,22 +45,13 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.2.5</version>
+				<version>3.5.3</version>
 				<configuration>
 					<argLine>
-						--add-exports=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-opens=jdk.compiler/com.sun.source.util=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED
-						--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 						--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
 					</argLine>
 				</configuration>
